// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
              testID="CeloAmount/value"
            >
              
              
              20.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @
                 
                <Text
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                  testID="CeloExchangeRate/value"
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="undefined/value"
              >
                
                ₱
                2.64
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                    testID="LineItemRow/undefined"
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="feeDrawer/ExchangeConfirmationCard/totalFee/value"
                    >
                      
                      ₱
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Total/value"
              >
                
                ₱
                2.64
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={false}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackground",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="TotalLineItem/ExchangeRate/value"
                    >
                      
                      $
                      0.75
                    </Text>
                  </Text>
                </View>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Subtotal/value"
              >
                
                $
                1.99
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`renders correctly when local amount is null 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
              testID="CeloAmount/value"
            >
              
              
              20.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @
                 
                <Text
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                  testID="CeloExchangeRate/value"
                >
                  
                  -
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="undefined/value"
              >
                
                ₱
                2.64
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                    testID="LineItemRow/undefined"
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="feeDrawer/ExchangeConfirmationCard/totalFee/value"
                    >
                      
                      ₱
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Total/value"
              >
                
                ₱
                2.64
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={false}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackground",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="TotalLineItem/ExchangeRate/value"
                    >
                      
                      $
                      0.75
                    </Text>
                  </Text>
                </View>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Subtotal/value"
              >
                
                $
                1.99
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`renders correctly when local amount is null and no local exchange rate is set 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
              testID="CeloAmount/value"
            >
              
              
              20.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @
                 
                <Text
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                  testID="CeloExchangeRate/value"
                >
                  
                  -
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="undefined/value"
              >
                
                -
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                    testID="LineItemRow/undefined"
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="feeDrawer/ExchangeConfirmationCard/totalFee/value"
                    >
                      
                      -
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Total/value"
              >
                
                -
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`renders correctly with giant numbers 1`] = `
<RCTScrollView>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginTop": 30,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
            >
              goldAmount
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                  },
                ]
              }
              testID="CeloAmount/value"
            >
              
              
              18,000,000,000.000
            </Text>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                Subtotal @
                 
                <Text
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                  testID="CeloExchangeRate/value"
                >
                  
                  €
                  0.55
                </Text>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  undefined,
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="undefined/value"
              >
                
                ₱
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="feeDrawer/ExchangeConfirmationCard"
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    feeActual
                  </Text>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <svg
                      fill="none"
                      height={16}
                      viewBox="0 0 16 16"
                      width={16}
                    >
                      <path
                        d="M3 6l5 5 5-5"
                        stroke="#B4B9BD"
                      />
                    </svg>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "marginVertical": 5,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "marginRight": 5,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2E3338",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 16,
                            "lineHeight": 22,
                          },
                          undefined,
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2E3338",
                          "fontFamily": "Inter-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        },
                        undefined,
                      ]
                    }
                    testID="LineItemRow/undefined"
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="feeDrawer/ExchangeConfirmationCard/totalFee/value"
                    >
                      
                      ₱
                      0
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "borderStyle": "solid",
                "borderTopColor": "#F8F9F9",
                "borderTopWidth": 1,
                "marginBottom": 15,
                "marginTop": 10,
                "width": "100%",
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-SemiBold",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                  ]
                }
              >
                total
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Total/value"
              >
                
                ₱
                31,920,000.00
              </Text>
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "space-between",
                  "marginVertical": 5,
                },
                Object {
                  "marginVertical": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginRight": 5,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  focusable={false}
                  nativeBackgroundAndroid={
                    Object {
                      "attribute": "selectableItemBackground",
                      "rippleRadius": undefined,
                      "type": "ThemeAttrAndroid",
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Text
                    style={
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          undefined,
                          Object {
                            "color": undefined,
                          },
                        ]
                      }
                      testID="TotalLineItem/ExchangeRate/value"
                    >
                      
                      $
                      0.75
                    </Text>
                  </Text>
                </View>
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                ]
              }
              testID="LineItemRow/undefined"
            >
              <Text
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
                testID="TotalLineItem/Subtotal/value"
              >
                
                $
                24,000,000.00
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;
